[Bug #164927648] Remove extra white space
Remove extra white space

--- a/UI/assets/css/pagestyle.css
+++ b/UI/assets/css/pagestyle.css
@@ -16,9 +16,11 @@
   --bodyFontFamilyFallback: sans-serif;
   --limeColor: lime;
 }
+@media screen and (max-width: 630px){
 body{
   position: fixed;
   overflow-x: hidden;
+  }
 }
 html, body{
   max-width: 100vw !important;
